# peek

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.ps1
creation_docs/: sneakpeek_description.md
resources/: peek.manifest  peek.rc
src/: annotation_layer.cpp  annotation_layer.h  annotation_tools.cpp  annotation_tools.h  app.cpp  app.h  drag_drop.cpp  drag_drop.h  file_assoc.cpp  file_assoc.h  folder_browser.cpp  folder_browser.h  image_loader.cpp  image_loader.h  image_viewport.cpp  image_viewport.h  inter_font.h  main.cpp  renderer.cpp  renderer.h  save_engine.cpp  save_engine.h  stb_impl.cpp  theme.cpp  theme.h  ui_panels.cpp  ui_panels.h  utils.cpp  utils.h
